samples/_failures_safe/1761168485_0698d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da60b097.c: In function ‘tokenize’:
./samples/SAFE/__tmp_da60b097.c:162:21: error: expected declaration or statement at end of input
  162 |                     column++;
      |                     ^~~~~~
./samples/SAFE/__tmp_da60b097.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da60b097.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da60b097.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da60b097.c:162:21: error: expected declaration or statement at end of input
